Remove PHP Composer workflow, update .gitignore, and add test script to composer.json

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
             ]
         }
     },
-    
+    "scripts": {
+        "test": "phpunit"
+      },
     "config": {
         "sort-packages": true,
         "preferred-install": "dist"
